--- a/XamlAnimatedGif.Demo/BasicTestsWindow.xaml
+++ b/XamlAnimatedGif.Demo/BasicTestsWindow.xaml
@@ -1,13 +1,31 @@
-﻿<Window x:Class="XamlAnimatedGif.Demo.BasicTestsWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BasicTestsWindow" Height="350" Width="525">
+﻿<Window
+    x:Class="XamlAnimatedGif.Demo.BasicTestsWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    Title="BasicTestsWindow"
+    Width="525"
+    Height="350">
     <StackPanel>
         <TextBox Name="txtFileName" />
-        <Button Name="btnBrowse" Content="Browse..." Click="BtnBrowse_OnClick" />
-        <Button Name="btnTestLzw" Content="Test LZW decompression" Click="BtnTestLzw_OnClick" />
-        <Button Name="btnDumpMetadata" Content="Dump metadata" Click="BtnDumpMetadata_OnClick" />
-        <Button Name="btnTestStream" Content="Using stream" Click="BtnTestStream_OnClick" />
-        <Button Name="btnTestBrush" Content="Brush" Click="BtnTestBrush_OnClick" />
+        <Button
+            Name="btnBrowse"
+            Click="BtnBrowse_OnClick"
+            Content="Browse..." />
+        <Button
+            Name="btnTestLzw"
+            Click="BtnTestLzw_OnClick"
+            Content="Test LZW decompression" />
+        <Button
+            Name="btnDumpMetadata"
+            Click="BtnDumpMetadata_OnClick"
+            Content="Dump metadata" />
+        <Button
+            Name="btnTestStream"
+            Click="BtnTestStream_OnClick"
+            Content="Using stream" />
+        <Button
+            Name="btnTestBrush"
+            Click="BtnTestBrush_OnClick"
+            Content="Brush" />
     </StackPanel>
 </Window>
