--- a/XamlAnimatedGif.Demo/InputBox.xaml
+++ b/XamlAnimatedGif.Demo/InputBox.xaml
@@ -1,11 +1,14 @@
-﻿<Window x:Class="XamlAnimatedGif.Demo.InputBox"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:XamlAnimatedGif.Demo"
-        mc:Ignorable="d"
-        Title="InputBox" Height="150" Width="400">
+﻿<Window
+    x:Class="XamlAnimatedGif.Demo.InputBox"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:XamlAnimatedGif.Demo"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="InputBox"
+    Width="400"
+    Height="150"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -13,11 +16,20 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Label Content="{Binding Prompt}" Grid.Row="0" />
-        <TextBox Text="{Binding Text}" Grid.Row="1" />
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="OK" IsDefault="True" Click="OKButtonClick" />
-            <Button Content="Cancel" IsCancel="True" Click="CancelButtonClick" />
+        <Label Grid.Row="0" Content="{Binding Prompt}" />
+        <TextBox Grid.Row="1" Text="{Binding Text}" />
+        <StackPanel
+            Grid.Row="2"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <Button
+                Click="OKButtonClick"
+                Content="OK"
+                IsDefault="True" />
+            <Button
+                Click="CancelButtonClick"
+                Content="Cancel"
+                IsCancel="True" />
         </StackPanel>
     </Grid>
 </Window>
