--- a/XamlAnimatedGif.Demo/MainWindow.xaml
+++ b/XamlAnimatedGif.Demo/MainWindow.xaml
@@ -1,18 +1,24 @@
-﻿<Window x:Class="XamlAnimatedGif.Demo.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:gif="https://github.com/XamlAnimatedGif/XamlAnimatedGif"
-        xmlns:local="clr-namespace:XamlAnimatedGif.Demo"
-        mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:MainWindow}"
-        WindowStartupLocation="CenterScreen"
-        Title="XAML Animated GIF demo" Height="640" Width="640">
+﻿<Window
+    x:Class="XamlAnimatedGif.Demo.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:gif="https://github.com/XamlAnimatedGif/XamlAnimatedGif"
+    xmlns:local="clr-namespace:XamlAnimatedGif.Demo"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="XAML Animated GIF demo"
+    Width="640"
+    Height="640"
+    d:DataContext="{d:DesignInstance local:MainWindow}"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="boolToVis" />
         <Storyboard x:Key="Blink">
-            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility" RepeatBehavior="Forever" Duration="0:0:1">
+            <ObjectAnimationUsingKeyFrames
+                RepeatBehavior="Forever"
+                Storyboard.TargetProperty="Visibility"
+                Duration="0:0:1">
                 <DiscreteObjectKeyFrame KeyTime="0:0:0">
                     <DiscreteObjectKeyFrame.Value>
                         <Visibility>Visible</Visibility>
@@ -27,7 +33,7 @@
         </Storyboard>
     </Window.Resources>
     <DockPanel>
-        <GroupBox Header="Options" DockPanel.Dock="Top">
+        <GroupBox DockPanel.Dock="Top" Header="Options">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition />
@@ -41,85 +47,159 @@
 
                 <Label Content="Image" />
 
-                <ComboBox Grid.Row="0" Grid.Column="1" Margin="5"
-                          ItemsSource="{Binding Images}"
-                          SelectedItem="{Binding SelectedImage}"
-                          VerticalAlignment="Top" />
+                <ComboBox
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Margin="5"
+                    VerticalAlignment="Top"
+                    ItemsSource="{Binding Images}"
+                    SelectedItem="{Binding SelectedImage}" />
 
                 <Grid Grid.Row="0" Grid.Column="2">
                     <Grid.RowDefinitions>
                         <RowDefinition />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    <Button Name="btnOpenFile" Grid.Row="0"
-                            Content="Open file..."
-                            Margin="5"
-                            Click="btnOpenFile_Click"/>
-                    <Button Name="btnOpenUrl" Grid.Row="1"
-                            Content="Open URL..."
-                            Margin="5,0,5,5"
-                            Click="btnOpenUrl_Click"/>
+                    <Button
+                        Name="btnOpenFile"
+                        Grid.Row="0"
+                        Margin="5"
+                        Click="btnOpenFile_Click"
+                        Content="Open file..." />
+                    <Button
+                        Name="btnOpenUrl"
+                        Grid.Row="1"
+                        Margin="5,0,5,5"
+                        Click="btnOpenUrl_Click"
+                        Content="Open URL..." />
                 </Grid>
 
-                <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"
-                            Orientation="Horizontal">
-                    <RadioButton Margin="5" Content="Default" IsChecked="{Binding UseDefaultRepeatBehavior}" />
-                    <RadioButton Margin="5" Content="Forever" IsChecked="{Binding RepeatForever}" />
-                    <RadioButton Margin="5" Content="Specific count" IsChecked="{Binding UseSpecificRepeatCount}" />
-                    <TextBox Margin="5" Text="{Binding RepeatCount}" Width="20" />
-                    <CheckBox Margin="5" Content="Auto start" IsChecked="{Binding AutoStart}" />
-                    <CheckBox Margin="5" Content="Cache frames in memory" IsChecked="{Binding CacheFramesInMemory}" />
+                <StackPanel
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="3"
+                    Orientation="Horizontal">
+                    <RadioButton
+                        Margin="5"
+                        Content="Default"
+                        IsChecked="{Binding UseDefaultRepeatBehavior}" />
+                    <RadioButton
+                        Margin="5"
+                        Content="Forever"
+                        IsChecked="{Binding RepeatForever}" />
+                    <RadioButton
+                        Margin="5"
+                        Content="Specific count"
+                        IsChecked="{Binding UseSpecificRepeatCount}" />
+                    <TextBox
+                        Width="20"
+                        Margin="5"
+                        Text="{Binding RepeatCount}" />
+                    <CheckBox
+                        Margin="5"
+                        Content="Auto start"
+                        IsChecked="{Binding AutoStart}" />
+                    <CheckBox
+                        Margin="5"
+                        Content="Cache frames in memory"
+                        IsChecked="{Binding CacheFramesInMemory}" />
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right">
-                    <Button Name="btnClear" Content="Clear" Click="btnClear_Click" />
-                    <Button Name="btnGC" Content="GC" Click="btnGC_Click"  />
-                    <Button Name="btnBasicTests" Content="..." Click="btnBasicTests_Click" />
+                <StackPanel
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    HorizontalAlignment="Right"
+                    Orientation="Horizontal">
+                    <Button
+                        Name="btnClear"
+                        Click="btnClear_Click"
+                        Content="Clear" />
+                    <Button
+                        Name="btnGC"
+                        Click="btnGC_Click"
+                        Content="GC" />
+                    <Button
+                        Name="btnBasicTests"
+                        Click="btnBasicTests_Click"
+                        Content="..." />
                 </StackPanel>
 
             </Grid>
         </GroupBox>
-        <GroupBox Header="Control" DockPanel.Dock="Bottom">
+        <GroupBox DockPanel.Dock="Bottom" Header="Control">
             <DockPanel>
-                <Button Name="btnPlay" ToolTip="Play" Click="btnPlay_Click" Margin="5" IsEnabled="False" DockPanel.Dock="Left">
+                <Button
+                    Name="btnPlay"
+                    Margin="5"
+                    Click="btnPlay_Click"
+                    DockPanel.Dock="Left"
+                    IsEnabled="False"
+                    ToolTip="Play">
                     <Image Source="/Images/play.png" Stretch="None" />
                 </Button>
-                <Button Name="btnPause" ToolTip="Pause" Click="btnPause_Click" Margin="5" IsEnabled="False" DockPanel.Dock="Left">
+                <Button
+                    Name="btnPause"
+                    Margin="5"
+                    Click="btnPause_Click"
+                    DockPanel.Dock="Left"
+                    IsEnabled="False"
+                    ToolTip="Pause">
                     <Image Source="/Images/pause.png" Stretch="None" />
                 </Button>
-                <Button Name="btnRewind" ToolTip="Rewind" Click="btnRewind_Click" Margin="5" IsEnabled="False" DockPanel.Dock="Right">
+                <Button
+                    Name="btnRewind"
+                    Margin="5"
+                    Click="btnRewind_Click"
+                    DockPanel.Dock="Right"
+                    IsEnabled="False"
+                    ToolTip="Rewind">
                     <Image Source="/Images/rewind.png" Stretch="None" />
                 </Button>
-                <TextBlock DockPanel.Dock="Bottom" Margin="5,0">
-                    <Run>Last run: </Run>
+                <TextBlock Margin="5,0" DockPanel.Dock="Bottom">
+                    <Run>Last run:</Run>
                     <Run Text="{Binding LastRunTime, Mode=OneWay}" />
                 </TextBlock>
 
-                <Slider Name="sldPosition"
-                        TickFrequency="1" TickPlacement="BottomRight"
-                        Minimum="0" Maximum="9" ValueChanged="sldPosition_ValueChanged" VerticalAlignment="Center" Margin="10" />
+                <Slider
+                    Name="sldPosition"
+                    Margin="10"
+                    VerticalAlignment="Center"
+                    Maximum="9"
+                    Minimum="0"
+                    TickFrequency="1"
+                    TickPlacement="BottomRight"
+                    ValueChanged="sldPosition_ValueChanged" />
             </DockPanel>
 
         </GroupBox>
         <GroupBox Header="Image">
             <Grid>
-                <Image Name="img" Margin="5"
-                       Stretch="None"
-                       gif:AnimationBehavior.SourceUri="{Binding SelectedImage}"
-                       gif:AnimationBehavior.RepeatBehavior="{Binding RepeatBehavior}"
-                       gif:AnimationBehavior.AutoStart="{Binding AutoStart}"
-                       gif:AnimationBehavior.CacheFramesInMemory="{Binding CacheFramesInMemory}"
-                       gif:AnimationBehavior.Loaded="AnimationBehavior_OnLoaded"
-                       gif:AnimationBehavior.Error="AnimationBehavior_OnError"
-                       gif:AnimationBehavior.DownloadProgress="AnimationBehavior_OnDownloadProgress"
-                       gif:AnimationBehavior.AnimationStarted="AnimationBehavior_OnAnimationStarted"
-                       gif:AnimationBehavior.AnimationCompleted="AnimationBehavior_OnAnimationCompleted"/>
-                <ProgressBar VerticalAlignment="Center" Height="30" Margin="20"
-                             Visibility="{Binding IsDownloading, Converter={StaticResource boolToVis}}"
-                             Minimum="0" Maximum="100" Value="{Binding DownloadProgress}"
-                             IsIndeterminate="{Binding IsDownloadProgressIndeterminate}" />
-                <Border HorizontalAlignment="Right" VerticalAlignment="Top"
-                        Visibility="{Binding Completed, Converter={StaticResource boolToVis}}">
+                <Image
+                    Name="img"
+                    Margin="5"
+                    gif:AnimationBehavior.AnimationCompleted="AnimationBehavior_OnAnimationCompleted"
+                    gif:AnimationBehavior.AnimationStarted="AnimationBehavior_OnAnimationStarted"
+                    gif:AnimationBehavior.AutoStart="{Binding AutoStart}"
+                    gif:AnimationBehavior.CacheFramesInMemory="{Binding CacheFramesInMemory}"
+                    gif:AnimationBehavior.DownloadProgress="AnimationBehavior_OnDownloadProgress"
+                    gif:AnimationBehavior.Error="AnimationBehavior_OnError"
+                    gif:AnimationBehavior.Loaded="AnimationBehavior_OnLoaded"
+                    gif:AnimationBehavior.RepeatBehavior="{Binding RepeatBehavior}"
+                    gif:AnimationBehavior.SourceUri="{Binding SelectedImage}"
+                    Stretch="None" />
+                <ProgressBar
+                    Height="30"
+                    Margin="20"
+                    VerticalAlignment="Center"
+                    IsIndeterminate="{Binding IsDownloadProgressIndeterminate}"
+                    Maximum="100"
+                    Minimum="0"
+                    Visibility="{Binding IsDownloading, Converter={StaticResource boolToVis}}"
+                    Value="{Binding DownloadProgress}" />
+                <Border
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Visibility="{Binding Completed, Converter={StaticResource boolToVis}}">
                     <Label Content="Completed">
                         <Label.Style>
                             <Style TargetType="Label">
